--- a/day1.html
+++ b/day1.html
@@ -1,4 +1,6 @@
-<!doctype html><html><head>
+<!doctype html5>
+<html>
+        <head>
         <title>
             Day 1 Assignment
         </title>
@@ -10,7 +12,8 @@
            <br> It will help me explore different languages and domains. 
            <br> It will help me stand out of the crowd for my development skills.
            <br> I can contribute to projects.
-</h3>
+        </h3>
         
-    
-</body></html>
+
+</body>
+</html>
